# cloudflare-ddns-rust

./: Cargo.toml  config.yaml
.github/workflows/: rust.yml
src/: main.rs
src/commands/: api.rs  file.rs
src/libs/: api.rs  cf.rs  config.rs  ip.rs  logging.rs  mod.rs  runner.rs
src/web/: routes.rs  server.rs
