[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "json",
    "std",
    "env-filter",
] }
