[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "~0", features = ["macros"] }
rand = { version = "~0" }
reqwest = { version = "~0" }
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
tokio = { version = "~1", features = ["full"] }
tracing = { version = "~0" }
tracing-subscriber = { version = "~0", features = [
    "fmt",
    "json",
    "std",
    "env-filter",
] }
tower-http = { version = "~0", features = ["trace"] }
cloudflare = { version = "~0" }
clap = { version = "~4", features = ["derive", "env"] }
once_cell = { version = "~1" }
serde_yaml = { version = "~0" }
openssl = { version = "~0", features = ["vendored"] }
